--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <h2 class="section-title" >about me</h2>
 
         <ul class="event-list">
-            <li>佐藤 壮瑠 2004年　7月9日生まれ</li>
-            <li>日本工業大学 先進工学部 データサイエンス学科　3年 27卒予定</li>
+            <li>-- -- 20--年　7月9日生まれ</li>
+            <li>------ -----部 ------学科　-年 --卒予定</li>
             <br>
             <li>マイクロコンピュータ研究部のプログラム班チーフをしています。</li>
             <li>機械学習や画像処理に興味があります</li>
@@ -223,7 +223,7 @@
     <!-- フッター -->
     <footer class="footer">
         <div class="footer-left">
-            <div class="footer-text">© 2025 佐藤壮瑠</div>
+            <div class="footer-text">© 2025 ----</div>
         </div>
     </footer>
 </body>
