--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li>佐藤 壮瑠 2004年　7月9日生まれ</li>
       <li>日本工業大学 先進工学部 データサイエンス学科　27卒予定</li>
       <br>
-      <li>CG制作、ゲーム制作、Iot、VR、ヒューマノイドロボット、自作PCなど、様々なことに関心があり挑戦しています。</li>
+      <li>CG制作、ゲーム制作、IoT、VR、ヒューマノイドロボット、自作PCなど、様々なことに関心があり挑戦しています。</li>
       <li>中でも特に、データ分析や機械学習・画像処理に興味があります。</li>
       <li>大学では数理統計やプログラミングを基礎から学び、AI・IoTによるビッグデータ解析やシステム構築に取り組んでいます。</li>
     </ul>
@@ -273,7 +273,7 @@
                 <p>
                   チュートリアルのモデルほど精度良くは学習できなかったものの、
                   Unityにおける関節の動きやトルク調整、強化学習における報酬と罰のバランスについて深く学ぶことができました。
-                  強化学習における「学習させたい行動をどう報酬で導くか」という設計力の重要性を実感できました。。
+                  強化学習における「学習させたい行動をどう報酬で導くか」という設計力の重要性を実感できました。
                 </p>
 
 
@@ -451,7 +451,7 @@
         <h3>AI当たり屋ゲーム</h3>
         <div class="basic-info-with-image">
           <div class="basic-info">
-            <p><strong>制作期間：</strong>約1週間</p>
+            <p><strong>制作期間：</strong>1週間</p>
             <p>Pythonで開発した画像認識を活用したゲーム</p>
             <ul class="tech-tags">
               <li>Python</li>
