--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
     <ul>
       <li><a href="#about">About me</a></li>
-      <li><a href="#skills">skills</a></li>
-      <li><a href="#works">works</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#works">Works</a></li>
 
     </ul>
   </header>
@@ -93,7 +93,7 @@
 
 
 
-  <h2 class="section-title" id="works">works</h2>
+  <h2 class="section-title" id="works">Works</h2>
 
   <div class="timeline">
 
