--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
       <h3>プログラミング言語</h3>
       <ul class="skill-list">
         <li>Python - 2年以上の学習・開発経験（深層学習・データ分析・IoTなど幅広く活用）</li>
+        <li>R言語 - 統計解析</li>
         <li>C# - Unityを用いたゲーム・強化学習の開発経験</li>
         <li>C - 1年以上の学習</li>
-
-        <li>SQL - 基本的なクエリ作成とデータ操作</li>
       </ul>
     </div>
 
@@ -79,9 +78,12 @@
       <h3>ライブラリ・フレームワーク・技術</h3>
       <ul class="skill-list">
         <li>PyTorch / TensorFlow / Keras </li>
+        <li>scikit-learn </li>
         <li>YOLO - 物体検出モデルの再学習と推論強化</li>
-        <li>pandas / numpy</li>
+        <li>pandas / numpy </li>
+        <li> matplotlib / seaborn</li>
         <li>OpenCV</li>
+        <li>SQL - 基本的なクエリ作成とデータ操作</li>
         <li>HTML/CSS </li>
       </ul>
     </div>
