--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <ul class="event-list">
       <li>佐藤 壮瑠 2004年　7月9日生まれ</li>
       <li>日本工業大学 先進工学部 データサイエンス学科　27卒予定</li>
-      <li>マイクロコンピュータ研究部のプログラム班チーフをしています。</li>
+      <li>マイクロコンピュータ研究部 プログラム班チーフ</li>
       <br>
       <li>CG制作、ゲーム制作、IoT、VR、ヒューマノイドロボット、自作PCなど、様々なことに関心があり挑戦しています。</li>
       <li>中でも特に、データ分析や機械学習・画像処理に興味があります。</li>
