--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
             <div class="detail-grid">
               <div class="detail-text">
                 <h4>制作意図・目標</h4>
-                <p>Joy-Conを使ったマルチプレイ体験を通じて、Unityの新Input Systemの理解を深めることを目的としました。</p>
+                <p>Joy-Conを使ったマルチプレイ体験を通じて、UnityのInput Systemの理解を深めることを目的としました。</p>
 
                 <h4>技術的な挑戦</h4>
                 <ul class="challenge-list">
@@ -686,9 +686,9 @@
 
                 <h4>工夫したポイント</h4>
                 <ul class="challenge-list">
-                  <li>キャラクターのツノを使って相手を弾き飛ばすという直感的なゲーム設計</li>
+                  <li>キャラクターのツノを使って相手を倒す直感的なゲーム設計</li>
                   <li>10秒に一度ボタンで急加速できる駆け引き要素</li>
-                  <li>敗北者同士が再戦できるモードを追加し、最後まで楽しめるようにした</li>
+                  <li>敗北者同士が再戦できるモードを追加し、敗北後も最後まで楽しめるようにした</li>
                   <li>シンプルなルールで説明なしでもプレイ可能なデザイン</li>
                 </ul>
               </div>
