--- a/index.html
+++ b/index.html
@@ -196,9 +196,10 @@
               <div class="detail-text">
                 <h4>コンペ概要</h4>
                 <p>BYU主催のKaggleコンペ「Locating Bacterial Flagellar
-                  Motors」に参加。細菌の3Dトモグラム画像から、べん毛モーターの位置を正確に検出するアルゴリズムを構築する課題に取り組みました。</p>
-                <a href="https://www.kaggle.com/competitions/byu-locating-bacterial-flagellar-motors-2025/overview"
-                  target="_blank" rel="noopener">▶ コンペ公式ページ（Kaggle）</a>
+                  Motors」に参加。細菌の3Dトモグラム画像から、べん毛モーターの位置を正確に検出するアルゴリズムを構築する課題に取り組みました。
+                  <br>
+                  <a href="https://www.kaggle.com/competitions/byu-locating-bacterial-flagellar-motors-2025/overview"
+                    target="_blank" rel="noopener">▶ コンペ公式ページ（Kaggle）</a>
                 </p>
                 <h4>成果と学び</h4>
                 <p>
